2006-10-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (wait_children): Don't crash if duper->chunker
					       is NULL

2006-10-04  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Call security_recvpkt() on A_SENDNACK
				 and dup P_REQ.
	* common-src/security-util.c: Improve message.

2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcleanupdisk.c: Accept -o arguments.
	* server-src/amcleanup.sh.in: Add missing 'shift' for non-linux system.
				      Accept -o arguments.

2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amoverview.pl.in: Fix parsing of time field from amadmin.

2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amidxtaped.c, restore-src/restore.c,
	  server-src/amcheck.c, server-src/amflush.c,
	  server-src/amlabel.c, server-src/taper.c,
	  server-src/taperscan.c: Check for CNF_TAPEDEV == NULL.

2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c: Don't set CNF_TAPEDEV to DEFAULT_TAPE_DEVICE.
	* configure.in: Don't set DEFAULT_TAPE_DEVICE.

2006-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c: Add logging on error.

2006-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amoverview.pl.in: Use shellwords instead of quotewords,
	  don't add date for disk not in the disklist.

2006-09-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c: Fix %hd printf argument format.
	* common-src/security-util.c: Fix %hd printf argument format.

2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.1p1 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.1p1).
	* NEWS: Update for 2.5.1p1

2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Improve debugging.
	* server-src/changer.c: Make sure to dup the fd out of the 0..2 range.

2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>